<resources>
    <string name="app_name">MyMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_bottom_item">Главная</string>
    <string name="favourites_bottom_item">Избранное</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="description_movie_detail_is_empty">(Описание отсутствует)</string>
    <string name="starring_label">В ролях:\u0020</string>
    <string name="creators_label">Создатели :\u0020</string>
    <string name="genre_label">Жанр :\u0020</string>
    <string name="trailer_lbl">Трейлер</string>
    <string name="list_name_new_movies">Новинки</string>
    <string name="list_name_popular">Популярное</string>
    <string name="list_name_day_genre">Жанр дня: %s</string>
    <string name="no_internet_error">Нет интернета</string>
    <string name="not_found_error">Не найдено</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="unknow_error">Неизвестная ошибка</string>
    <string name="data_not_loaded">Не удалось загрузить данные</string>
    <string name="add_to_favourites_toast">Добавлено в избранное</string>
    <string name="remove_from_favorites_toast">Удалено из избранного</string>
    <string name="error_add_favourite_toast">Ошибка при добавлении в избранное</string>
    <string name="error_remove_favourite_toast">Ошибка при удалении из избранного</string>
    <string name="favourite_remove">Удалить</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_movie_list">MovieListActivity</string>
    <string name="ok_button">Понятно</string>
    <string name="refresh">Обновить</string>

<!--    Error section-->
    <string name="error_label">Ошибка</string>
    <string name="error_load_dialog">При загрузке произошла ошибка</string>
    <string name="error_load">Ошибка загрузки</string>
</resources>