<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_black"
    android:clickable="true"
    android:focusable="true"
    tools:context=".presentation.fragments.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_detail_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@tools:sample/avatars"
            tools:minHeight="300dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/img_detail_movie_poster">

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="MovieName" />

            <TextView
                android:id="@+id/tv_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#969696"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_name"
                tools:text="2022 | 18+ | 1 Season | K-Drama" />

            <TextView
                android:id="@+id/tv_movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie"
                tools:text="A young woman, bullied to the point of deciding to drop out of school, plans the best way to get revenge. After becoming a primary school teacher, she takes in the son of the man who tormented her the most to enact her vengeance." />

            <LinearLayout
                android:id="@+id/ll_starring_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_description">

                <TextView
                    android:id="@+id/tv_starring_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starring_label"
                    android:textColor="@color/detail_text_color"
                    tools:text="@string/starring_label"/>

                <TextView
                    android:id="@+id/tv_starring_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_text_color"
                    tools:text="Song Hye-kyo, Lee Do-hyun, Lim Ji-yeon, Song Hye-kyo, Lee Do-hyun, Lim Ji-yeon,Song Hye-kyo, Lee Do-hyun, Lim Ji-yeon,"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_creators_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/ll_starring_group">

                <TextView
                    android:id="@+id/tv_creators_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_text_color"
                    android:text="@string/creators_label"
                    app:layout_constraintTop_toBottomOf="@id/ll_starring_group"
                    tools:text="@string/creators_label" />

                <TextView
                    android:id="@+id/tv_creators_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_text_color"
                    tools:text="Kim Eun-sook, An Gil-ho"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_genre_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/ll_creators_group">

                <TextView
                    android:id="@+id/tv_genre_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_label"
                    android:textColor="@color/detail_text_color"
                    tools:text="@string/genre_label"/>

                <TextView
                    android:id="@+id/tv_genre_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_text_color"
                    tools:text="Revenge, Psychological Thriller"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_trailer_section_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/ll_genre_group"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/tv_trailer_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_text_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/trailer_lbl"
                    tools:text="@string/trailer_lbl" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"/>

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>