<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_black"
    android:clickable="true"
    android:focusable="true"
    tools:context=".presentation.fragments.MovieListFragment">

    <ProgressBar
        android:id="@+id/pb_loading_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/ll_error_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_name"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text = "No internet"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_root_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/first_movie_element"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/default_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:minHeight="450dp" />

            <LinearLayout
                android:id="@+id/ll_list_content_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="13dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/first_movie_element">

                <TextView
                    android:id="@+id/tv_list_name_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/list_name_new_movies"
                    android:textColor="@color/list_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/list_name_new_movies" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_list_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_list_content_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="13dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/ll_list_content_1">

                <TextView
                    android:id="@+id/tv_list_name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/list_name_popular"
                    android:textColor="@color/list_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/list_name_popular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_list_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_list_content_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="13dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/ll_list_content_2">

                <TextView
                    android:id="@+id/tv_list_name_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/list_name_day_genre"
                    android:textColor="@color/list_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/list_name_day_genre" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_list_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>